--- a/MediaQuotes/app/src/main/AndroidManifest.xml
+++ b/MediaQuotes/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:exported="false">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.mediaquotes.InputActivity" />
+                android:value="com.example.mediaquotes.MainActivity" />
         </activity>
 
         <activity
